k8s/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: tasks-app
spec:
  ingressClassName: nginx
  rules:
    - host: tasks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-backend
                port:
                  number: 80
